Fixed login avatar bug